--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -21,17 +21,21 @@ jobs:
           apt install -y git build-essential cmake automake libtool autoconf libhwloc-dev libuv1-dev libssl-dev wget
           echo "XMRIG_VERSION="`cat src/version.h | grep -Eo "APP_VERSION\s+\"(.+?)\"" | awk -F "\"" '{print $2}'` >> $GITHUB_ENV
           sed -i 's/DonateLevel = 1/DonateLevel = 0/g' src/donate.h
-          mkdir build 
-          cd scripts
-          pwd
-          ./build_deps.sh
-          cd ../build
-          pwd
-          cmake .. -DWITH_NVML=OFF -DWITH_CUDA=OFF -DWITH_OPENCL=OFF -DWITH_OPENCL=OFF -DXMRIG_DEPS=../scripts/deps
-          make -j$(nproc) 
-          tar cfz xmrig.tar.gz xmrig
-          pwd
-          ls -l
+          
+      - name: do some goofy spets
+        run: |
+           mkdir build 
+           cd scripts
+           pwd
+           ./build_deps.sh
+           cd ../build
+           pwd
+           cmake .. -DWITH_NVML=OFF -DWITH_CUDA=OFF -DWITH_OPENCL=OFF -DWITH_OPENCL=OFF -DXMRIG_DEPS=../scripts/deps
+           make -j$(nproc) 
+           tar cfz xmrig.tar.gz xmrig
+           pwd
+           ls -l
+           
       - name: Upload Ubuntu build artifacts
         uses: actions/upload-artifact@v4
         with:
