--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Build project on Ubuntu
         run: |
           yes | apt update
-          apt install git build-essential cmake automake libtool autoconf wget
+          apt install -y git build-essential cmake automake libtool autoconf wget 
           echo "XMRIG_VERSION="`cat src/version.h | grep -Eo "APP_VERSION\s+\"(.+?)\"" | awk -F "\"" '{print $2}'` >> $GITHUB_ENV
           sed -i 's/DonateLevel = 1/DonateLevel = 0/g' src/donate.h
           
