--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -37,7 +37,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: xmrig-${{ env.XMRIG_VERSION }}
-          path: build/xmrig.tar.gz
+          path: xmrig/build/xmrig.tar.gz
           if-no-files-found: error
           retention-days: 7
           overwrite: true
